Correction alignement titres FA

--- a/includes/assets/css/styleFA.css
+++ b/includes/assets/css/styleFA.css
@@ -699,6 +699,15 @@
 {
 	font-family: robotomedium, Verdana, sans-serif;
 	color: #262626;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.titre_solo_choix
+{
+	font-family: robotomedium, Verdana, sans-serif;
+	color: #262626;
 	text-align: justify;
 	padding-top: 10px;
 	padding-bottom: 10px;
